classDiagram
    class Vehiculo {
        -placa: string
        -capacidadCarga: number
        +obtenerInfo() string
    }

    class Etiqueta {
        -codigoBarras: string
        -esFragil: boolean
        +obtenerAdvertencia() string
        +obtenerCodigo() string
    }

    class Paquete {
        -destinatario: string
        -direccion: string
        -etiqueta: Etiqueta
        +mostrarGuia() void
    }

    class Conductor {
        -nombre: string
        -entregasRealizadas: number
        -vehiculo: Vehiculo
        +mostrarDatos() void
    }

    Conductor o-- Vehiculo : Agregación "usa"
    Paquete *-- Etiqueta : Composición "tiene"
